# binocular-recon-rgb

./: .gitignore  CMakeLists.txt  README.md  docker.sh
config/: test.json
src/: config.cpp  config.h  data_loader.cpp  data_loader.h  feature_extraction.cpp  main.cpp
